# TradeSelect

./: .gitignore  ARCHITECTURE.md  README.md
.claude/: settings.local.json
backend/: pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: scan.py
backend/app/data/: live_candidates.py  mock_candidates.py
backend/app/ingestion/: yf_quotes.py
backend/app/models/: candidate.py  signal.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  scan.ts
frontend/src/components/candidates/: CandidateTable.tsx  ConvictionBar.tsx  LiquidityWarning.tsx  ScoreBadge.tsx
frontend/src/components/checklist/: MasterChecklist.tsx
frontend/src/components/layout/: AppShell.tsx
frontend/src/lib/: formatters.ts
frontend/src/pages/: CandidatePage.tsx  DashboardPage.tsx  MatrixPage.tsx
frontend/src/store/: filters.ts
frontend/src/types/: candidate.ts
