[project]
name = "tradeselect-backend"
version = "0.1.0"
description = "FastAPI backend for the TradeSelect NSE/BSE momentum scanner."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "python-dateutil>=2.9",
]

[project.optional-dependencies]
# Pulled in starting at Phase 1.
data = [
    "jugaad-data>=0.27",
    "yfinance>=0.2.50",
    "pandas>=2.2",
    "pandas-ta>=0.3.14b",
    "numpy>=1.26",
    "duckdb>=1.1",
    "pyarrow>=17",
    "apscheduler>=3.10",
    "httpx>=0.27",
]
dev = [
    "pytest>=8.3",
    "ruff>=0.6",
    "mypy>=1.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"
